# srsran-edgeric-5g

./: .gitignore  README.md  make-ran-er.sh  run2ue-zmq-mode.sh  run4ue-zmq-mode.sh  run_gnb_multi_ue.sh  run_gnb_ota.sh
edgeric-v2/: .gitignore  README.md  control_mcs_pb2.py  control_weights_pb2.py  edgeric_messenger.py  metrics_pb2.py  send_mcs.py  send_weight.py
edgeric-v2/core/: agent_original.py
edgeric-v2/muApp1/: muApp1_run_DL_scheduling.py
edgeric-v2/muApp2/: muApp2_train_RL_DL_scheduling.py
edgeric-v2/muApp2/conf/: edge_ric.yaml
edgeric-v2/muApp3/: muApp3_monitor_terminal.py
edgeric-v2/muApp4/: dummy.py  neurwin.py  traditional_trace.txt  trained_model_embb.pt  trained_model_urllc.pt  windex_demo_muapp.py
edgeric-v2/muApp4/conf/: edge_ric.yaml  edge_ric_app_0.yaml  edge_ric_app_1.yaml  edge_ric_app_2.yaml  edge_ric_neurwin.yaml  edge_ric_neurwin_ppo.yaml  edge_ric_neurwin_ppo_toy.yaml  edge_ric_neurwin_toy.yaml  edge_ric_toy.yaml
edgeric-v2/muApp4/output/: neurwin_trace.txt  traditional_trace.txt  traditional_trace_archana.txt  traditional_trace_old.txt
edgeric-v2/muApp4/stream_rl/: __init__.py  plots.py  rewards.py
edgeric-v2/muApp4/stream_rl/envs/: __init__.py  edge_ric.py  edge_ric_app_0.py  edge_ric_app_1.py  edge_ric_app_2.py  edge_ric_emulator.py  edge_ric_old.py  edge_ric_onewhittle.py  edge_ric_simulator.py  sizeAwareIndex.py  streaming_env.py
edgeric-v2/muApp4/trainers/core/: agent.py  common.py  (+1 more)
edgeric-v2/protobufs/: control_mcs.proto  control_weights.proto  metrics.proto
open5gs/: amf.yaml  mme.yaml  udm.yaml
srs-4G-UE/.config/: enb.conf  ue-4g-zmq.conf  ue1-4g-zmq.conf  ue2-4g-zmq.conf  ue3-4g-zmq.conf  ue4-4g-zmq.conf
srsRAN-5G-ER/: .gitignore  CMakeLists.txt  README.md  run_gnb_multi_ue.sh  run_gnb_ota.sh
srsRAN-5G-ER/configs/: n320-ota-amrisoft.yml  zmq-mode-multi-ue.yml  zmq-mode.yml
srsRAN-5G-ER/custom-flowgraph/: CMakeLists.txt  rep_sink.cpp  rep_sink.h  req_source.cpp  req_source.h  zero_mq_processor.cpp
srsRAN-5G-ER/lib/: CMakeLists.txt
srsRAN-5G-ER/lib/cu_up/: cu_up_impl.h
srsRAN-5G-ER/lib/edgeric/: CMakeLists.txt  control_mcs.pb.cc  control_mcs.pb.h  control_weights.pb.cc  control_weights.pb.h  edgeric.cpp  edgeric.h  metrics.pb.cc  metrics.pb.h
srsRAN-5G-ER/lib/protobufs/: control_mcs.proto  control_weights.proto  metrics.proto
srsRAN-5G-ER/lib/scheduler/: CMakeLists.txt  cell_scheduler.cpp
traffic-generator/: iperf_client_2ues.sh  readme.md
(+34 files in other folders)
